fixed x-overflow

--- a/responsive.css
+++ b/responsive.css
@@ -51,7 +51,7 @@
 
 p {
     margin-top: 4vh;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .reviews {
