--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h3 {
 
 p {
     margin-top: 2vh;
-    font-size: 25px;
+    font-size: 20px;
 }
 
  .testimonials {
